2005-09-30  Viren.L  <lviren@novell.com>

	Fixes #314599.
	* gui/dialogs/recurrence-page.c (clear_widgets):
	Changed parameter ENDING_FOREVER to ENDING_FOR while invoking 
	e_dialog_option_menu_set, invoked make_ending_count_special ().
	  
2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #273781
	* gui/alarm-notify/alarm-notify-dialog.c:
	(notified_alarms_dialog_new): Set the alarm window to
	appear on the top.

2005-09-30  P. S. Chakravarthi <pchakravarthi@novell.com>

	Fix #274188
	* gui/e-cal-model.c
	(get_dtstart): make use of internal zone information so that
	previous date is not shown in list view for an all-day event.

2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #273847
	* gui/dialogs/comp-editor.c: (comp_editor_get_mime_attach_list): set
	the disposition from the attachment.
	* gui/itip-utils.c: (append_cal_attachments): Send the right disposition
	value.
	* gui/itip-utils.h: Adding variable dipostion to CalMimeAttach structure.

2005-09-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #246480
	* gui/e-calendar-view.c: (e_calendar_view_add_event): Remember
       the time if the event is copy pasted in week or month views.	

2005-08-30  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #270036
	(init_widgets): added the missing signal handler when
	the list selection changes.

	Reworked the patch from Dinesh Layek <ldinesh@novell.com>
	 
2005-08-29  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/e-calendar-table.c (e_calendar_table_open_task): Set the 
	USER_ORG flag while converting a personal task to assigned one.

2005-09-29  Viren.L  <lviren@novell.com>
	Fixes #317014
	
	* gui/e-calendar-table.c (e_calendar_table_open_task):
	Set the flags in e_calendar_table_open_task.
	* gui/gnome-cal.c (gnome_calendar_new_task):set the NEW_ITEM flag.
	* gui/tasks-component.c (create_new_todo),
	* gui/e-tasks.c (e_tasks_new_task): set NEW_ITEM & USER_ORG flag.